--- a/uni-nongraph.ipynb
+++ b/uni-nongraph.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file(\"data_table-killed.html\")\n",
+    "output_file(\"data_table-injured.html\")\n",
     "\n",
     "data = dict(\n",
     "        peeps=['Count', 'Proportion', 'Percent'],\n",
