--- a/Chart_pies.ipynb
+++ b/Chart_pies.ipynb
@@ -183,6 +183,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "with open(\"datagun.csv\", 'r') as dt:\n",
+    "    for c, row in enumerate(dt):\n",
+    "        print(c)\n",
+    "        print(row[2])\n",
+    "        print(row[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -202,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
