--- a/Data_Cleanup.ipynb
+++ b/Data_Cleanup.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Used to depict the data set\n",
+    "\n",
     "# import csv\n",
     "# with open('datagun.csv', 'r') as f:\n",
     "#     reader = csv.reader(f)\n",
@@ -38,7 +40,9 @@
     }
    ],
    "source": [
-    "import csv\n",
+    "# Used to count missing values for each column\n",
+    "\n",
+    "# import csv\n",
     "with open('datagun.csv', 'r') as f:\n",
     "    reader = csv.reader(f)\n",
     "    counter = 0\n",
@@ -61,7 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
+    "# Used to replace date table into 3 tables: day, month, year\n",
+    "\n",
+    "# import csv\n",
     "\n",
     "listname_accept = 'datagun.csv'\n",
     "\n",
@@ -89,7 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
+    "# Used to insert missing values\n",
+    "\n",
+    "# import csv\n",
     "\n",
     "listname_accept = 'datagun2.csv'\n",
     "\n",
@@ -119,10 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Used to drop columns\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('datagun.csv')\n",
+    "\n",
+    "df.drop(columns=['state_house_district', 'state_senate_district', 'congressional_district'])\n",
+    "\n",
+    "df.to_csv('datagun.csv', sep=',', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -141,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
