Bar chart monthly incidents added (1st version)

--- a/years.ipynb
+++ b/years.ipynb
@@ -2120,20 +2120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3764, 2654, 3221, 3366, 3700, 3819, 4440, 4482, 4364, 4251, 3356, 3392, 3422, 2746, 3813, 3858, 4361, 4021, 4450, 4355, 4215, 3868, 3652, 3830, 3990, 3456, 4200, 3977, 4183, 3835, 4442, 4473, 3758, 3726, 3511, 3987, 4543, 3731, 4134, 4579, 4638, 4260, 4565, 4050, 3470, 4258, 4088, 3990, 4204, 2770, 3382]\n",
+      "[3.764, 2.654, 3.221, 3.366, 3.7, 3.819, 4.44, 4.482, 4.364, 4.251, 3.356, 3.392, 3.422, 2.746, 3.813, 3.858, 4.361, 4.021, 4.45, 4.355, 4.215, 3.868, 3.652, 3.83, 3.99, 3.456, 4.2, 3.977, 4.183, 3.835, 4.442, 4.473, 3.758, 3.726, 3.511, 3.987, 4.543, 3.731, 4.134, 4.579, 4.638, 4.26, 4.565, 4.05, 3.47, 4.258, 4.088, 3.99, 4.204, 2.77, 3.382]\n",
       "51\n"
      ]
     }
    ],
    "source": [
     "#monthly incident counts\n",
+    "#dit kan nog korter ws maarja\n",
     "\n",
     "incident_counter_2014 = []\n",
     "incident_counter_2015 = []\n",
@@ -2215,17 +2216,45 @@
     "    if i == len(incident_counter_2018)-1:\n",
     "        monthly_counts.append(month_counter)\n",
     "        month_counter = 1\n",
+    "        \n",
+    "        \n",
+    "#divide by 1000 for scaling\n",
+    "scaled_mcounts = []\n",
+    "\n",
+    "for i in monthly_counts:\n",
+    "    i = i / 1000\n",
+    "    scaled_mcounts.append(i)\n",
     "    \n",
-    "        \n",
-    "print(monthly_counts)\n",
-    "print(len(monthly_counts))\n",
-    "      \n",
-    "            \n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    \n"
+    "print(scaled_mcounts)\n",
+    "print(len(scaled_mcounts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw bar chart for monthly incident counts\n",
+    "\n",
+    "output_file(\"months.html\")\n",
+    "\n",
+    "str_months = ['jan', 'feb', 'mar', 'apr', 'may', 'jun','jul','aug','sep','okt','nov','dec',\n",
+    "              'jan', 'feb', 'mar', 'apr', 'may', 'jun','jul','aug','sep','okt','nov','dec',\n",
+    "             'jan', 'feb', 'mar', 'apr', 'may', 'jun','jul','aug','sep','okt','nov','dec',\n",
+    "             'jan', 'feb', 'mar', 'apr', 'may', 'jun','jul','aug','sep','okt','nov','dec',\n",
+    "             'jan','feb','mar']\n",
+    "\n",
+    "p = figure(x_range=str_months, plot_height=200, title=\"Monthly Incident Counts divided by 1000\",\n",
+    "           toolbar_location=None, tools=\"\")\n",
+    "\n",
+    "p.vbar(x=str_months, top=scaled_mcounts, width=0.5)\n",
+    "\n",
+    "p.xgrid.grid_line_color = None\n",
+    "p.y_range.start = 0\n",
+    "\n",
+    "\n",
+    "show(p)"
    ]
   },
   {
