fk regression with this data set

--- a/Data_Cleanup.ipynb
+++ b/Data_Cleanup.ipynb
@@ -91,13 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87044\n",
+      "112524\n"
+     ]
+    }
+   ],
    "source": [
     "# Used to insert missing values\n",
     "\n",
-    "# import csv\n",
+    "import csv\n",
+    "import numpy as np\n",
     "\n",
     "listname_accept = 'datagun2.csv'\n",
     "\n",
@@ -111,9 +121,9 @@
     "            header = row[:]\n",
     "            new_file.writerow(header)\n",
     "        else:\n",
-    "            if row[19] == '':\n",
+    "            if row[11] == 'Unknown':\n",
     "                counter = counter + 1\n",
-    "                row[19]='Unknown'\n",
+    "                row[11]='-1'\n",
     "                new_file.writerow(row)\n",
     "            else:\n",
     "                counter2 = counter2 + 1\n",
