update with new data set

--- a/IPYNBS/bar-charts.ipynb
+++ b/IPYNBS/bar-charts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"datagun.csv\", sep=',')\n",
+    "df = pd.read_csv(\"../DATA/datagun.csv\", sep=',')\n",
     "\n",
     "male = df['participant_gender'].str.count(\"Male\").sum()\n",
     "female = df['participant_gender'].str.count(\"Female\").sum()\n",
     "unknown = df['participant_gender'].str.count(\"Unknown\").sum()\n",
     "\n",
-    "output_file(\"HTML/bars-gender.html\")\n",
+    "output_file(\"../HTML/bars-gender.html\")\n",
     "\n",
     "guns = ['Unknown', 'Female', 'Male']\n",
     "hover_tool= HoverTool(tooltips=[('value', '@x'), ('amount', '@top')], mode='vline')\n",
@@ -54,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"datagun.csv\", sep=',')\n",
+    "df = pd.read_csv(\"../DATA/datagun.csv\", sep=',')\n",
     "\n",
     "male = df['participant_age_group'].str.count(\"Child\").sum()\n",
     "female = df['participant_age_group'].str.count(\"Teen\").sum()\n",
     "unknown = df['participant_age_group'].str.count(\"Adult\").sum()\n",
     "\n",
-    "output_file(\"HTML/bars-agegroup.html\")\n",
+    "output_file(\"../HTML/bars-agegroup.html\")\n",
     "\n",
     "guns = ['Adult', 'Teen', 'Child']\n",
     "hover_tool= HoverTool(tooltips=[('value', '@x'), ('amount', '@top')], mode='vline')\n",
@@ -85,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"datagun.csv\", sep=',')\n",
+    "df = pd.read_csv(\"../DATA/datagun.csv\", sep=',')\n",
     "\n",
     "victim = df['participant_type'].str.count(\"Victim\").sum()\n",
     "suspect = df['participant_type'].str.count(\"Suspect\").sum()\n",
     "unknown = df['participant_type'].str.count(\"Unknown\").sum()\n",
     "\n",
-    "output_file(\"HTML/bars-type.html\")\n",
+    "output_file(\"../HTML/bars-type.html\")\n",
     "\n",
     "guns = ['Unknown', 'Victim', 'Suspect']\n",
     "hover_tool= HoverTool(tooltips=[('value', '@x'), ('amount', '@top')], mode='vline')\n",
@@ -116,18 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"datagun.csv\", sep=',')\n",
+    "df = pd.read_csv(\"../DATA/datagun.csv\", sep=',')\n",
     "\n",
     "injured = df['participant_status'].str.count(\"Injured\").sum()\n",
     "unharmed = df['participant_status'].str.count(\"Unharmed\").sum()\n",
     "unknown = df['participant_status'].str.count(\"Unknown\").sum()\n",
     "killed = df['participant_status'].str.count(\"Killed\").sum()\n",
     "\n",
-    "output_file(\"HTML/bars-status.html\")\n",
+    "output_file(\"../HTML/bars-status.html\")\n",
     "\n",
     "guns = ['Unknown', 'Injured', 'Killed', 'Unharmed']\n",
     "hover_tool= HoverTool(tooltips=[('value', '@x'), ('amount', '@top')], mode='vline')\n",
