--- a/IPYNBS/uni-nongraph.ipynb
+++ b/IPYNBS/uni-nongraph.ipynb
@@ -20,23 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', '1', '10', '11', '12', '13', '14', '15', '16', '17', '19', '2', '20', '25', '3', '4', '5', '53', '6', '7', '8', '9']\n",
+      "['0', '1', '10', '16', '17', '2', '27', '3', '4', '5', '50', '6', '7', '8', '9']\n",
       "---------------------------------------------------------------------------------------------------------\n",
-      "22\n"
+      "15\n"
      ]
     }
    ],
    "source": [
-    "reader = pd.read_csv('datagun.csv')\n",
+    "reader = pd.read_csv('../DATA/datagun.csv')\n",
     "amount_l = []\n",
-    "for amount in reader['n_injured']:\n",
+    "for amount in reader['n_killed']:\n",
     "    amount = str(amount)\n",
     "    amount_l.append(amount)\n",
     "remove = list(set(amount_l))\n",
@@ -50,57 +50,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({'0': 117156, '1': 69721, '2': 9722, '3': 2078, '4': 570, '5': 193, '6': 72, '7': 38, '8': 15, '9': 10, '10': 5, '12': 3, '11': 3, '14': 3, '15': 2, '17': 2, '19': 2, '16': 1, '53': 1, '13': 1, '25': 1, '20': 1})\n"
+      "[('0', 180484), ('1', 45561), ('2', 4342), ('3', 560), ('4', 119), ('5', 34), ('6', 8), ('8', 5), ('9', 3), ('7', 1), ('10', 1), ('16', 1), ('50', 1), ('27', 1), ('17', 1)]\n"
      ]
     }
    ],
    "source": [
     "from collections import Counter\n",
     "# used a shortened dataset, replace 'stage3test.csv' for the big dataset\n",
-    "reader = pd.read_csv('datagun.csv')\n",
+    "reader = pd.read_csv('../DATA/datagun.csv')\n",
     "amount_k = []\n",
     "# appends all the cities in dataset to list\n",
-    "for amount in reader['n_injured']:\n",
+    "for amount in reader['n_killed']:\n",
     "    amount = str(amount)\n",
     "    amount_k.append(amount)\n",
     "cnt = Counter(amount_k)\n",
     "# change the value for how many cities you want in your result\n",
-    "print(cnt.most_common(22))"
+    "print(cnt.most_common(23))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file(\"data_table-killed.html\")\n",
+    "output_file(\"../HTML/data_table-killed.html\")\n",
     "\n",
     "data = dict(\n",
     "        peeps=['Count', 'Proportion', 'Percent'],\n",
-    "        zero=['154752', '0,77530752', '77.530752%'],\n",
-    "        one=['40399', '0,20239899', '20.239899%'],\n",
-    "        two=['3798', '0,01902798', '1.902798%'],\n",
-    "        three=['497', '0,00248997', '0.248997%'],\n",
-    "        four=['106', '0,00053106', '0.053106%'],\n",
-    "        five=['28', '0,00014028', '0.014028%'],\n",
-    "        six=['7', '0,00003507', '0.003507%'],\n",
-    "        seven=['1', '0,00000501', '0.000501%'],\n",
-    "        eight=['5', '0,0000250501', '0.00250501%'],\n",
-    "        nein=['2', '0,00001002', '0.001002%'],\n",
-    "        ten=['1', '0,00000501', '0.000501%'],\n",
-    "        sixten=['1', '0,00000501', '0.000501%'],\n",
-    "        seventen=['1', '0,00000501', '0.000501%'],\n",
-    "        seventwoten=['1', '0,00000501', '0.000501%'],\n",
-    "        fiveten=['1', '0,00000501', '0.000501%'],\n",
-    "        total=['199600', '1,00', '100%'],\n",
+    "        zero=['180484', '0,7809542268', '78.09542268%'],\n",
+    "        one=['45561', '0,197142447', '19.7142447%'],\n",
+    "        two=['4342', '0,018787834', '1.8787834%'],\n",
+    "        three=['560', '0,00242313', '0.242313%'],\n",
+    "        four=['119', '0,000514913', '0.0514913%'],\n",
+    "        five=['24', '0,000103848', '0.0103848%'],\n",
+    "        six=['8', '0,000034616', '0.0034616%'],\n",
+    "        seven=['1', '0,000004327', '0.0004327%'],\n",
+    "        eight=['5', '0,000021635', '0.0021635%'],\n",
+    "        nein=['3',  '0,000012981', '0.0012981%'],\n",
+    "        ten=['1', '0,000004327', '0.0004327%'],\n",
+    "        sixten=['1', '0,000004327', '0.0004327%'],\n",
+    "        seventen=['1', '0,000004327', '0.0004327%'],\n",
+    "        seventwoten=['1', '0,000004327', '0.0004327%'],\n",
+    "        fiveten=['1', '0,000004327', '0.0004327%'],\n",
+    "        total=['231122', '1,00', '100%'],\n",
     "    )\n",
     "source = ColumnDataSource(data)\n",
     "\n",
@@ -130,37 +130,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file(\"data_table-injured.html\")\n",
+    "output_file(\"../HTML/data_table-injured.html\")\n",
     "\n",
     "data = dict(\n",
     "        peeps=['Count', 'Proportion', 'Percent'],\n",
-    "        zero=['117156', '0,586953908', '58.6953908%'],\n",
-    "        one=['69721', '0,34930221', '34.930221%'],\n",
-    "        two=['9722', '0,04870722', '4.870722%'],\n",
-    "        three=['2078', '0,01041078', '1.041078%'],\n",
-    "        four=['570', '0,0028557', '0.28557%'],\n",
-    "        five=['193', '0,00096693', '0.096693%'],\n",
-    "        six=['72', '0,00036072', '0.036072%'],\n",
-    "        seven=['38', '0,00019038', '0.019038%'],\n",
-    "        eight=['15', '0,00007515', '0.007515%'],\n",
-    "        nein=['10', '0,0000501', '0.00501%'],\n",
-    "        ten=['5', '0,00002505', '0.002505%'],\n",
-    "        eleven=['3', '0,00001503', '0.001503%'],\n",
-    "        twelve=['3', '0,00001503', '0.001503%'],\n",
-    "        thirten=['1', '0,00000501', '0.000501%'],\n",
-    "        fourten=['3', '0,00001503', '0.001503%'],\n",
-    "        fiveten=['2', '0,00001002', '0.001002%'],\n",
-    "        sixten=['1', '0,00000501', '0.000501%'],\n",
-    "        seventen=['2', '0,00001002', '0.001002%'],\n",
-    "        neinten=['2', '0,00001002', '0.001002%'],\n",
-    "        twoten=['1', '0,00000501', '0.000501%'],\n",
-    "        fivetwoten=['1', '0,00000501', '0.000501%'],\n",
-    "        fivetenthree=['1', '0,00000501', '0.000501%'],\n",
-    "        total=['199600', '1,00', '100%'],\n",
+    "        zero=['137511', '0,595010097', '59.5010097%'],\n",
+    "        one=['79248', '0,342906096', '34.2906096%'],\n",
+    "        two=['10971', '0,047471517', '4.7471517%'],\n",
+    "        three=['2360', '0,01021172', '1.021172%'],\n",
+    "        four=['640', '0,00276928', '0.276928%'],\n",
+    "        five=['212', '0,000917324', '0.0917324%'],\n",
+    "        six=['80', '0,00034616', '0.034616%'],\n",
+    "        seven=['45', '0,000194715', '0.0194715%'],\n",
+    "        eight=['16', '0,000069232', '0.0069232%'],\n",
+    "        nein=['11', '0,000047597', '0.0047597%'],\n",
+    "        ten=['6', '0,000025962', '0.0025962%'],\n",
+    "        eleven=['4', '0,000017308', '0.0017308%'],\n",
+    "        twelve=['3', '0,000012981', '0.0012981%'],\n",
+    "        thirten=['1', '0,000004327', '0.0004327%'],\n",
+    "        fourten=['3', '0,000012981', '0.0012981%'],\n",
+    "        fiveten=['2', '0,000008653', '0.0008653%'],\n",
+    "        sixten=['1', '0,000004327', '0.0004327%'],\n",
+    "        seventen=['2', '0,000008653', '0.0008653%'],\n",
+    "        eightten=['1', '0,000004327', '0.0004327%'],\n",
+    "        neinten=['2', '0,000008653', '0.0008653%'],\n",
+    "        twoten=['1', '0,000004327', '0.0004327%'],\n",
+    "        fivetwoten=['1', '0,000004327', '0.0004327%'],\n",
+    "        fivetenthree=['1', '0,000004327', '0.0004327%'],\n",
+    "        total=['231122', '1,00', '100%'],\n",
     "    )\n",
     "source = ColumnDataSource(data)\n",
     "\n",
@@ -184,6 +185,7 @@
     "        TableColumn(field=\"fiveten\", title=\"15\"),\n",
     "        TableColumn(field=\"sixten\", title=\"16\"),\n",
     "        TableColumn(field=\"seventen\", title=\"17\"),\n",
+    "        TableColumn(field=\"eightten\", title=\"18\"),\n",
     "        TableColumn(field=\"neinten\", title=\"19\"),\n",
     "        TableColumn(field=\"twoten\", title=\"20\"),\n",
     "        TableColumn(field=\"fivetwoten\", title=\"25\"),\n",
@@ -212,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
