Years update, code folder added

--- a/CODE/IPYNBS/years.ipynb
+++ b/CODE/IPYNBS/years.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
     "\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.io import output_file, show\n",
-    "\n",
+    "from bokeh.models import HoverTool\n",
     "\n",
     "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1733,7 @@
        "[231122 rows x 17 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1793,15 +1793,18 @@
     "output_file(\"../HTML/years.html\")\n",
     "\n",
     "str_years = ['2014','2015','2016','2017','2018']\n",
+    "hover_tool= HoverTool(tooltips=[('value', '@x'), ('amount', '@top')], mode='vline')\n",
     "\n",
-    "p = figure(x_range=str_years, plot_height=250, title=\"Incident Counts divided by 10000 for each Year\",\n",
-    "           toolbar_location=None, tools=\"\")\n",
+    "p = figure(x_range=str_years, plot_height=300, title=\"Incident Counts\",\n",
+    "           toolbar_location='right', tools=[hover_tool,\"pan,wheel_zoom,reset,save\"])\n",
     "\n",
     "p.vbar(x=str_years, top=scaled_counts, width=0.5)\n",
     "\n",
     "p.x_range.range_padding = 0.0001\n",
     "p.xgrid.grid_line_color = None\n",
     "p.y_range.start = 0\n",
+    "p.xaxis.axis_label = \"Years\"\n",
+    "p.yaxis.axis_label = \"Amount of occurences x10000\"\n",
     "\n",
     "\n",
     "show(p)"
@@ -1809,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1920,40 +1923,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#draw bar chart for monthly incident counts\n",
     "\n",
-    "output_file(\"months.html\")\n",
+    "output_file(\"../HTML/months.html\")\n",
     "\n",
-    "str_months = ['jan14', 'feb14', 'mar14', 'apr14', 'may14', 'jun14','jul14','aug14','sep14','okt14','nov14','dec14',\n",
-    "              'jan15', 'feb15', 'mar15', 'apr15', 'may15', 'jun15','jul15','aug15','sep15','okt15','nov15','dec15',\n",
-    "             'jan16', 'feb16', 'mar16', 'apr16', 'may16', 'jun16','jul16','aug16','sep16','okt16','nov16','dec16',\n",
-    "             'jan17', 'feb17', 'mar17', 'apr17', 'may17', 'jun17','jul17','aug17','sep17','okt17','nov17','dec17',\n",
-    "             'jan18','feb18','mar18']\n",
+    "str_months = ['jan-14', 'feb-14', 'mar-14', 'apr-14', 'may-14', 'jun-14','jul-14','aug-14','sep-14','okt-14','nov-14','dec-14',\n",
+    "              'jan-15', 'feb-15', 'mar-15', 'apr-15', 'may-15', 'jun-15','jul-15','aug-15','sep-15','okt-15','nov-15','dec-15',\n",
+    "             'jan-16', 'feb-16', 'mar-16', 'apr-16', 'may-16', 'jun-16','jul-16','aug-16','sep-16','okt-16','nov-16','dec-16',\n",
+    "             'jan-17', 'feb-17', 'mar-17', 'apr-17', 'may-17', 'jun-17','jul-17','aug-17','sep-17','okt-17','nov-17','dec-17',\n",
+    "             'jan-18','feb-18','mar-18']\n",
+    "hover_tool= HoverTool(tooltips=[('value', '@x'), ('amount', '@top')], mode='vline')\n",
     "\n",
-    "p = figure(x_range=str_months, plot_height=200, title=\"Monthly Incident Counts divided by 1000\",\n",
-    "           toolbar_location=None, tools=\"\")\n",
+    "p = figure(x_range=str_months, plot_height=300, title=\"Monthly Incident Counts\",\n",
+    "           toolbar_location='right', tools=[hover_tool,\"pan,wheel_zoom,reset,save\"])\n",
     "\n",
-    "p.vbar(x=str_months, top=scaled_mcounts, width=0.5)\n",
+    "p.vbar(x=str_months, top=scaled_mcounts, width=1)\n",
     "\n",
     "p.x_range.range_padding = 0.0001\n",
     "p.xaxis.major_label_orientation = 1\n",
     "p.xgrid.grid_line_color = None\n",
     "p.y_range.start = 0\n",
-    "\n",
+    "p.xaxis.axis_label = \"Month with correspoding year\"\n",
+    "p.yaxis.axis_label = \"Amount of occurences x1000\"\n",
     "\n",
     "show(p)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1972,7 +1970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
