--- a/CODE/IPYNBS/years.ipynb
+++ b/CODE/IPYNBS/years.ipynb
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1947,7 @@
     "p.xaxis.major_label_orientation = 1\n",
     "p.xgrid.grid_line_color = None\n",
     "p.y_range.start = 0\n",
-    "p.xaxis.axis_label = \"Month with correspoding year\"\n",
+    "p.xaxis.axis_label = \"Month with corresponding year\"\n",
     "p.yaxis.axis_label = \"Amount of occurences x1000\"\n",
     "\n",
     "show(p)"
@@ -1970,7 +1970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
